# zttp

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  build.zig  build.zig.zon
.github/: dependabot.yml
.github/workflows/: bazel.yml  ci.yml
src/: BUILD.bazel  main.zig
src/transport/: tcp.zig  transport.zig
