"""
Http framework for Zig
"""

module(
    name = "zhttp",
    version = "1.0.0",
)

bazel_dep(name = "rules_zig", version = "0.14.0")

zig = use_extension(
    "@rules_zig//zig:extensions.bzl",
    "zig",
    dev_dependency = True,
)
zig.toolchain(zig_version = "0.16.0")
use_repo(zig, "zig_toolchains")
